--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .page {
     display: grid;
     place-items: center;
+    place-content: center;
     width: 100%;
     min-height: 100vh;
     background: url(./images/bg-mobile.png) no-repeat bottom;
@@ -146,7 +147,7 @@
         flex-direction: row;
         gap: 30px;
         width: 100%;
-        max-width:none;
+        max-width: none;
     }
     .head {
         width: 250px;
